<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/scrollForm"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constarintLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="24dp"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textViewTituloForm"
            style="@style/styleTituloSecao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/contentDescriptionTituloFormTeste"
            android:text="@string/labelTituloFormTeste"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditIdade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/labelIdade"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/textViewTituloForm"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewTituloForm"
            app:layout_constraintTop_toBottomOf="@+id/textViewTituloForm"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editIdade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionPeso"
            android:text="@string/labelPeso"
            android:labelFor="@id/editPeso"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditIdade"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditIdade"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditIdade">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditSupra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionSupraIliaca"
            android:text="@string/labelSupraIliaca"
            android:labelFor="@id/editSupra"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditPeso"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditPeso"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditPeso">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSupra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/labelSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/labelSexo"
            android:labelFor="@id/radioGoupSexo"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditSupra"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditSupra"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditSupra" />


        <RadioGroup
            android:id="@+id/radioGoupSexo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checkedButton="@id/radioMasculino"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/labelSexo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/labelSexo"
            app:layout_constraintTop_toBottomOf="@+id/labelSexo">

            <RadioButton
                android:id="@+id/radioMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelSexoMasculino"
                android:contentDescription="@string/contentDescriptionSexoMasculino"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="136dp" />

            <RadioButton
                android:id="@+id/radioFeminino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contentDescriptionSexoFeminino"
                android:text="@string/labelSexoFeminino"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditTriceps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            android:hint="@string/contentDescriptionTriceps"
            android:text="@string/labelTriceps"
            android:labelFor="@id/editTriceps"
            app:layout_constraintEnd_toEndOf="@+id/radioGoupSexo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/radioGoupSexo"
            app:layout_constraintTop_toBottomOf="@+id/radioGoupSexo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTriceps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditAbdominal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionAbnominal"
            android:text="@string/labelAbnominal"
            android:labelFor="@id/editAbdominal"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditTriceps"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditTriceps"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditTriceps">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAbdominal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditSubescapular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionSubescapular"
            android:text="@string/labelSubescapular"
            android:labelFor="@id/editSubescapular"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditAbdominal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditAbdominal"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditAbdominal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSubescapular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEditCoxa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contentDescriptionCoxa"
            android:text="@string/labelCoxa"
            android:labelFor="@id/editCoxa"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/layoutEditSubescapular"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/layoutEditSubescapular"
            app:layout_constraintTop_toBottomOf="@+id/layoutEditSubescapular">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editCoxa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCalcular"
            style="@style/styleContainedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/labelCalcularPercentual"
            android:contentDescription="@string/contentDescriptionCalcularPercentual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutEditCoxa" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>