<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">


    <TextView
        android:id="@+id/textviewResultado"
        style="@style/styleTituloApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelResultadoPercentualGordura"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewHeaderDensidadeCorporal"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderDensidadeCorporal"
        app:layout_constraintEnd_toEndOf="@+id/textviewResultado"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textviewResultado"
        app:layout_constraintTop_toBottomOf="@+id/textviewResultado" />

    <TextView
        android:id="@+id/textViewResultadoDensidadeCorporal"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderDensidadeCorporal"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderDensidadeCorporal"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderDensidadeCorporal" />


    <TextView
        android:id="@+id/textViewHeaderMassaMagra"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderMassaMagra"
        app:layout_constraintEnd_toEndOf="@+id/textViewResultadoPercentualGordura"
        app:layout_constraintStart_toStartOf="@+id/textViewResultadoPercentualGordura"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoPercentualGordura" />

    <TextView
        android:id="@+id/textViewHeaderPercentualMassaMagra"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderPercentualMassaMagra"
        app:layout_constraintEnd_toEndOf="@+id/textViewResultadoMassaMagra"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewResultadoMassaMagra"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoMassaMagra" />

    <TextView
        android:id="@+id/textViewHeaderPesoIdeal"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderPesoIdeal"
        app:layout_constraintEnd_toEndOf="@+id/textViewResultadoPercentualMassaMagra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewResultadoPercentualMassaMagra"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoPercentualMassaMagra" />

    <TextView
        android:id="@+id/textViewHeaderPesoExcesso"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderPesoEmExcesso"
        app:layout_constraintEnd_toEndOf="@+id/textViewResultadoPesoIdeal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewResultadoPesoIdeal"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoPesoIdeal" />

    <TextView
        android:id="@+id/textViewHeaderClassificacao"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderClassificacao"
        app:layout_constraintEnd_toEndOf="@+id/textViewResultadoPesoExcesso"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewResultadoPesoExcesso"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoPesoExcesso" />

    <TextView
        android:id="@+id/textViewResultadoPesoIdeal"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderPesoIdeal"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderPesoIdeal"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderPesoIdeal" />

    <TextView
        android:id="@+id/textViewResultadoPesoExcesso"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderPesoExcesso"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderPesoExcesso"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderPesoExcesso" />

    <TextView
        android:id="@+id/textViewResultadoClassificacao"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderClassificacao"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderClassificacao"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderClassificacao" />

    <TextView
        android:id="@+id/textViewResultadoMassaMagra"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderMassaMagra"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderMassaMagra"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderMassaMagra" />

    <TextView
        android:id="@+id/textViewResultadoPercentualMassaMagra"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderPercentualMassaMagra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderPercentualMassaMagra"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderPercentualMassaMagra" />

    <TextView
        android:id="@+id/textViewHeaderMassaGorda"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderGorda"
        app:layout_constraintEnd_toEndOf="@+id/textViewResultadoDensidadeCorporal"
        app:layout_constraintStart_toStartOf="@+id/textViewResultadoDensidadeCorporal"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoDensidadeCorporal" />

    <TextView
        android:id="@+id/textViewResultadoMassaGorda"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderMassaGorda"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderMassaGorda"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderMassaGorda" />

    <TextView
        android:id="@+id/textViewHeaderPercentualGordura"
        style="@style/styleLabelTituloResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/labelTextViewHeaderPercentualGordura"
        app:layout_constraintEnd_toEndOf="@+id/textViewResultadoMassaGorda"
        app:layout_constraintStart_toStartOf="@+id/textViewResultadoMassaGorda"
        app:layout_constraintTop_toBottomOf="@+id/textViewResultadoMassaGorda" />

    <TextView
        android:id="@+id/textViewResultadoPercentualGordura"
        style="@style/styleLabelNormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="@+id/textViewHeaderPercentualGordura"
        app:layout_constraintStart_toStartOf="@+id/textViewHeaderPercentualGordura"
        app:layout_constraintTop_toBottomOf="@+id/textViewHeaderPercentualGordura" />


</androidx.constraintlayout.widget.ConstraintLayout>